# eurlex-builder

./: .gitignore  .zenodo.json  AGENTS.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  example-config.yaml  pyproject.toml
.github/workflows/: ci.yml
configs/: communications-vdl.yaml  full-run-final-2026-04-30.yaml  full-run.yaml
docs/: doc-type-verification.md  extraction-approach-summary.md  pdf-isolation-repair.md
scripts/: import_enrichment.py  prepare_pdf_repair.py  prepare_quality_repair.py  prepare_structural_repair.py  repair_replayed_rows.py  validate-against-eurlex.R
src/eurlex_builder/: __init__.py  checkpoint.py  cli.py  config.py  constants.py  enrich.py  errors.py  eurovoc_review.py  pipeline.py  protocols.py  translate.py  utils.py  validate.py
src/eurlex_builder/extractors/: docling_process.py  html.py  pdf.py  splitter.py
src/eurlex_builder/sources/: cellar.py
src/eurlex_builder/storage/: duckdb.py  export.py
tests/: conftest.py  docling_startup_error_stub.py  docling_worker_stub.py  test_cellar.py  test_checkpoint.py  test_cli.py  test_config.py  test_enrich.py  test_extractors.py  test_pdf_repair.py  test_pipeline.py  test_quality_repair.py  test_splitter.py  test_storage.py  test_translate.py  test_utils.py  test_validate.py
