[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eurlex-builder"
version = "0.1.0"
description = "Build research-ready datasets from EU legislative data (EUR-Lex / Cellar)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Timo Seidl", email = "timo.seidl@tum.de" },
]
keywords = ["eu-law", "eur-lex", "legislation", "sparql", "open-data", "cellar"]
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "duckdb>=1.1",
    "polars>=1.0",
    "pyarrow>=15.0",
    "requests>=2.31",
    "lxml>=5.0",
    "sparqlwrapper>=2.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
pdf = [
    # Worker protocol and complete-result validation are audited against 2.107.
    "docling>=2.107,<3",
    "onnxruntime>=1.24.2,<2",
    "pymupdf>=1.24",
]
translate = [
    "transformers>=4.40",
    "torch>=2.0",
    "sentencepiece>=0.2",
]
all = [
    "eurlex-builder[pdf,translate]",
]
dev = [
    "eurlex-builder[all]",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.15",
    "mypy>=1.15",
    "build>=1.2",
]

[project.scripts]
eurlex-builder = "eurlex_builder.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
eurlex_builder = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"

[tool.ruff]
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
